SyntacticAnalyzer/tests/fail/sentenciasimple-expresion-operadorunario.java
class foo {
	ctor (int n1)
	var int n2;
	{
		// no es una sentencia
		!new objeto();
	
	}
}
